force-app/main/default/objects/Quality_Search_Config__mdt/Quality_Search_Config__mdt.object-meta.xml
<CustomObject>
    <description>Top-level Quality Search configuration. One record per named search setup (e.g. Service Agent, Fraud Reviewer). Children: Inputs, Objects.</description>
    <label>Quality Search Config</label>
    <pluralLabel>Quality Search Configs</pluralLabel>
</CustomObject>