force-app/main/default/objects/Quality_Search_Config__mdt/fields/Hard_Result_Limit__c.field-meta.xml
<CustomField>
    <fullName>Hard_Result_Limit__c</fullName>
    <description>If the combined query returns more than this many rows, the search is refused as too-broad (anti-enumeration). Default 50.</description>
    <label>Hard Result Limit</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>