force-app/main/default/objects/Quality_Search_Config__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When false, this configuration is rejected at runtime. Use to disable a config without deleting it.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>