force-app/main/default/objects/Quality_Search_Config__mdt/fields/Qualitative_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Qualitative_Threshold__c</fullName>
    <description>Minimum number of qualitative identifiers the caller must provide before the search runs. Default 2.</description>
    <label>Qualitative Threshold</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>